use update date

--- a/layouts/posts/single.html
+++ b/layouts/posts/single.html
@@ -17,7 +17,7 @@
 
         <article>
             <h2>{{ .Title }}</h2>
-            <p class="date">Published on {{ .Date.Format "January 2, 2006" }}</p>
+            <p class="date">Updated on {{ .Lastmod.Format "January 2, 2006" }}</p>
 
             <div class="content">
                 {{ .Content }}
